# llm-router

./: Makefile  README.md  pyrightconfig.json
configs/: config.yaml  routes.yaml
deployments/: docker-compose.yaml
scripts/: seed-routes.py
services/embedding/: Dockerfile  pyproject.toml  requirements.txt
services/embedding/src/: __init__.py  main.py  servicer.py
services/embedding/tests/: test_embedding.py
services/router/: Dockerfile  go.mod  go.sum
services/router/cmd/seed/: main.go
services/router/cmd/server/: main.go
services/router/internal/config/: config.go
services/router/internal/embedding/: client.go
services/router/internal/router/: router.go
services/router/internal/server/: grpc.go  http.go
